--- a/docs/visual-basic/toc.yml
+++ b/docs/visual-basic/toc.yml
@@ -1,5 +1,5 @@
 - name: Guida a Visual Basic
-  href: index.md
+  href: index.yml
 - name: Novità in Visual Basic
   href: getting-started/whats-new.md
 - name: Introduzione
