--- a/docs/core/toc.yml
+++ b/docs/core/toc.yml
@@ -65,6 +65,8 @@
       href: tutorials/consuming-library-with-visual-studio.md
 - name: Novità di .NET Core
   items:
+    - name: Novità di .NET Core 3.1
+      href: whats-new/dotnet-core-3-1.md
     - name: Novità di .NET Core 3.0
       href: whats-new/dotnet-core-3-0.md
     - name: Novità di .NET Core 2.2
