--- a/docs/spark/toc.yml
+++ b/docs/spark/toc.yml
@@ -25,6 +25,8 @@
       href: how-to-guides/debug.md
     - name: Inviare processi a HDInsight
       href: how-to-guides/hdinsight-deploy-methods.md
+    - name: Inviare processi a Databricks
+      href: how-to-guides/databricks-deploy-methods.md
 - name: Riferimenti
   items:
     - name: Riferimento API
