--- a/docs/core/compatibility/toc.yml
+++ b/docs/core/compatibility/toc.yml
@@ -15,6 +15,8 @@
       href: 2.2-3.0.md
     - name: Da 2.0 a 2.1
       href: 2.0-2.1.md
+    - name: Da .NET Framework a .NET Core
+      href: fx-core.md
 - name: Per area
   expanded: true
   items:
